kubernetes/apps/freshrss/freshrss/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: freshrss
  namespace: freshrss
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: freshrss
  template:
    metadata:
      labels:
        app: freshrss
    spec:
      containers:
        - name: freshrss
          image: lscr.io/linuxserver/freshrss:1.29.1-ls309
          resources:
            requests:
              memory: 64Mi
              cpu: 50m
            limits:
              memory: 256Mi
              cpu: 200m
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 60
            periodSeconds: 20
            failureThreshold: 5
          volumeMounts:
            - name: data
              mountPath: /config
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: freshrss-data-pvc
